--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,28 +2,49 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-/* Fix zoom and scale issues */
+/* Force consistent sizing and prevent zoom */
+* {
+    box-sizing: border-box;
+}
+
 html {
+    font-size: 16px !important;
     zoom: 1 !important;
     -webkit-text-size-adjust: 100% !important;
     -ms-text-size-adjust: 100% !important;
     text-size-adjust: 100% !important;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    width: 100% !important;
+    height: 100% !important;
+    overflow-x: hidden;
 }
 
 body {
+    font-size: 1rem !important;
+    line-height: 1.5 !important;
     zoom: 1 !important;
     transform: scale(1) !important;
     transform-origin: 0 0 !important;
     -webkit-transform: scale(1) !important;
     -webkit-transform-origin: 0 0 !important;
+    width: 100% !important;
+    min-height: 100vh !important;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
-/* Prevent zoom on mobile devices */
-@media screen and (max-width: 768px) {
+/* Prevent zoom on all devices */
+@media screen {
     html, body {
         zoom: 1 !important;
-        -webkit-text-size-adjust: none !important;
-        -ms-text-size-adjust: none !important;
-        text-size-adjust: none !important;
+        -webkit-text-size-adjust: 100% !important;
+        -ms-text-size-adjust: 100% !important;
+        text-size-adjust: 100% !important;
+    }
+    
+    /* Force consistent viewport */
+    .min-h-screen {
+        min-height: 100vh !important;
     }
 }
