--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,9 +2,14 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-/* Force consistent sizing and prevent zoom */
-* {
-    box-sizing: border-box;
+/* RESET COMPLETO PARA ZOOM E ESCALA */
+*, *::before, *::after {
+    box-sizing: border-box !important;
+    zoom: 1 !important;
+    -webkit-transform: none !important;
+    -moz-transform: none !important;
+    -ms-transform: none !important;
+    transform: none !important;
 }
 
 html {
@@ -13,38 +18,57 @@ html {
     -webkit-text-size-adjust: 100% !important;
     -ms-text-size-adjust: 100% !important;
     text-size-adjust: 100% !important;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    width: 100% !important;
-    height: 100% !important;
-    overflow-x: hidden;
-}
-
-body {
-    font-size: 1rem !important;
-    line-height: 1.5 !important;
-    zoom: 1 !important;
-    transform: scale(1) !important;
-    transform-origin: 0 0 !important;
-    -webkit-transform: scale(1) !important;
-    -webkit-transform-origin: 0 0 !important;
-    width: 100% !important;
-    min-height: 100vh !important;
+    -webkit-font-smoothing: antialiased !important;
+    -moz-osx-font-smoothing: grayscale !important;
+    width: 100vw !important;
+    height: 100vh !important;
+    overflow-x: hidden !important;
     margin: 0 !important;
     padding: 0 !important;
 }
 
-/* Prevent zoom on all devices */
-@media screen {
+body {
+    font-size: 16px !important;
+    line-height: 1.5 !important;
+    zoom: 1 !important;
+    transform: scale(1) !important;
+    transform-origin: top left !important;
+    -webkit-transform: scale(1) !important;
+    -webkit-transform-origin: top left !important;
+    width: 100vw !important;
+    min-height: 100vh !important;
+    max-width: 100vw !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    position: relative !important;
+}
+
+/* FORÇA RESET EM TODOS OS ELEMENTOS */
+#app, .min-h-screen, main, div, section, article {
+    zoom: 1 !important;
+    transform: none !important;
+    -webkit-transform: none !important;
+    max-width: 100vw !important;
+}
+
+/* MEDIA QUERIES ESPECÍFICAS */
+@media screen and (max-width: 1920px) {
     html, body {
         zoom: 1 !important;
-        -webkit-text-size-adjust: 100% !important;
-        -ms-text-size-adjust: 100% !important;
-        text-size-adjust: 100% !important;
+        font-size: 16px !important;
     }
-    
-    /* Force consistent viewport */
-    .min-h-screen {
-        min-height: 100vh !important;
+}
+
+@media screen and (min-width: 1921px) {
+    html, body {
+        zoom: 1 !important;
+        font-size: 16px !important;
     }
+}
+
+/* FORÇA VIEWPORT CONSISTENTE */
+.min-h-screen {
+    min-height: 100vh !important;
+    width: 100vw !important;
+    max-width: 100vw !important;
 }
